--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "homepage": "https://npc-roman.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "shortid": "^2.2.16",
+    "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
